--- a/base/build.gradle
+++ b/base/build.gradle
@@ -176,8 +176,10 @@ dependencies {
     api 'com.google.firebase:firebase-perf'
     api 'com.google.firebase:firebase-perf-ktx'
     api 'com.google.firebase:firebase-crashlytics'
+    api 'com.google.firebase:firebase-crashlytics-ktx'
     api 'com.google.firebase:firebase-crashlytics-ndk'
     api 'com.google.firebase:firebase-analytics'
+    api 'com.google.firebase:firebase-analytics-ktx'
     api 'com.firebaseui:firebase-ui-database:6.0.2'
     api 'com.firebaseui:firebase-ui-firestore:6.0.2'
     api('com.firebaseui:firebase-ui-storage:6.0.2') {
