--- a/components/home-module/build.gradle
+++ b/components/home-module/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "io.github.jamesfchen.bundle-plugin"
     id 'org.jetbrains.kotlin.android'
+    id("com.google.devtools.ksp")
 }
 apply from: "$rootDir/script/ui_tradition.gradle"
 android {
@@ -32,6 +33,7 @@ dependencies {
     implementation project.moduleify("account-module")
     implementation project.moduleify('hotel-export')
     implementation project.moduleify('framework-base')
+    ksp 'com.github.bumptech.glide:compiler:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
