--- a/gradle.properties
+++ b/gradle.properties
@@ -45,7 +45,7 @@ android.useDeprecatedNdk=true
 org.gradle.caching=true
 ########################################################
 useJamesfChenSnapshots = true
-applicationId=com.electrolytej.pisces
+applicationId=com.electrolytej.spacecraft
 keyAlias=123456
 keyPassword=123456
 storePassword=123456
@@ -101,8 +101,8 @@ AMAP_SEARCH_VERSION=6.9.2
 AMAP_3DMAP_VERSION=6.9.4
 EXIFINTERFACE_VERISON = 1.3.2
 FIREBASE_VERSION = 32.7.0
-AROUTER_VERSION=1.3.2
-#IBCROUTER_VERSION=1.6.2
+#AROUTER_VERSION=1.3.2
+IBCROUTER_VERSION=1.6.2
 NAVIGATION_VERSION=2.5.3
 #LIFECYCLE_VERSION=1.0.2
 LINT_VERSION = 30.3.0
