--- a/base/build.gradle
+++ b/base/build.gradle
@@ -151,7 +151,7 @@ dependencies {
     api "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
     api "com.github.bumptech.glide:recyclerview-integration:${GLIDE_VERSION}"
     api "com.github.bumptech.glide:okhttp3-integration:${GLIDE_VERSION}"
-    ksp 'com.github.bumptech.glide:compiler:4.11.0'
+//    ksp 'com.github.bumptech.glide:compiler:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
