add live streaming
Signed-off-by: electrolyteJ <electrolytej@gmail.com>

--- a/module_config.json
+++ b/module_config.json
@@ -103,6 +103,12 @@
       "format": "framework_foundation",
       "group": "fwk",
       "sourcePath": ":lint-rules"
+    },
+    {
+      "simpleName": "livestreaming-module",
+      "format": "bundle",
+      "group": "livestreaming",
+      "sourcePath": ":components:livestreaming-module"
     }
   ]
 }
