--- a/components/livestreaming-module/CMakeLists.txt
+++ b/components/livestreaming-module/CMakeLists.txt
@@ -51,7 +51,7 @@ find_library( # Sets the name of the path variable.
         # Specifies the name of the NDK library that
         # you want CMake to locate.
         GLESv2)
-
+find_package(fbjni REQUIRED CONFIG)
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
@@ -60,5 +60,6 @@ target_link_libraries( # Specifies the target library.
         media-lib
         android
         vulkan
+        fbjni::fbjni
         ${log-lib}
         ${GLESv2-lib})
