--- a/components/hotel-module/bundle2/build.gradle
+++ b/components/hotel-module/bundle2/build.gradle
@@ -14,4 +14,6 @@ dependencies {
     implementation project.moduleify('framework-base')
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    api 'androidx.databinding:databinding-runtime:8.2.0'
+    api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
 }
