--- a/components/hotel-module/bundle1/build.gradle
+++ b/components/hotel-module/bundle1/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     implementation project.moduleify('framework-base')
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.madrapps:plot:0.1.1'
 }
