--- a/components/feeds-module/src/main/AndroidManifest.xml
+++ b/components/feeds-module/src/main/AndroidManifest.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name=".page.detal.DetailActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="www.j.com"
+                    android:path="/web"
+                    android:scheme="ispacecraft" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
