--- a/components/home-module/src/main/AndroidManifest.xml
+++ b/components/home-module/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <activity
             android:exported="true"
             android:name="com.jamesfchen.h5container.WebViewActivity"
-            android:theme="@style/Theme.AppCompat">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
