--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ android {
             ext.enableCrashlytics = false
             firebaseCrashlytics {
                 mappingFileUploadEnabled false
-                nativeSymbolUploadEnabled true
+                nativeSymbolUploadEnabled false
                 unstrippedNativeLibsDir = "$buildDir/intermediates/merged_native_libs/debug/out/lib/arm64-v8a"
             }
             minifyEnabled false
