--- a/components/hotel-module/bundle2/build.gradle
+++ b/components/hotel-module/bundle2/build.gradle
@@ -6,6 +6,7 @@ apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
     buildFeatures {
         dataBinding true
+        aidl true
     }
 }
 dependencies {
