--- a/base/build.gradle
+++ b/base/build.gradle
@@ -21,7 +21,7 @@ android{
             }
         }
         javaCompileOptions.annotationProcessorOptions.arguments = [
-                "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                "room.schemaLocation"  : "$projectDir/schemas",
                 "room.incremental"     : "true",
                 "room.expandProjection": "true"
         ]
@@ -47,11 +47,6 @@ android{
                 res.srcDirs += "$projectDir/$it/main/res-frame-animation"
                 res.srcDirs += "$projectDir/$it/main/res"
                 java.srcDirs += "$projectDir/$it/main/java"
-
-//                    assets.srcDirs += "$projectDir/src/inhouse/assets"
-//                    aidl.srcDirs += "$projectDir/src/inhouse/aidl"
-//                    res.srcDirs += "$projectDir/src/inhouse/res"
-//                    java.srcDirs += "$projectDir/src/inhouse/java"
             }
         }
         androidTest {
@@ -111,7 +106,7 @@ dependencies {
       http style  end
     */
 
-    kapt "com.google.dagger:dagger-compiler:2.16"
+    ksp "com.google.dagger:dagger-compiler:2.16"
 //    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 //    implementation "com.github.jnr:jnr-unixsocket:0.23"
     api "com.google.android.gms:play-services-cronet:${CRONET_VERSION}"
@@ -154,7 +149,7 @@ dependencies {
     api "com.github.bumptech.glide:recyclerview-integration:${GLIDE_VERSION}"
     api "com.github.bumptech.glide:okhttp3-integration:${GLIDE_VERSION}"
 //    ksp 'com.github.bumptech.glide:compiler:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    ksp 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     api "com.facebook.fresco:fresco:${FRESCO_VERSION}"
@@ -174,8 +169,6 @@ dependencies {
 
 //    implementation 'com.google.android.gms:play-services-location:16.0.0'
 //    implementation 'com.google.android.gms:play-services-fitness:16.0.1'
-    api 'io.github.jamesfchen:lifecycle-api:1.1.0'
-
     api platform("com.google.firebase:firebase-bom:$FIREBASE_VERSION")
     api 'com.google.firebase:firebase-perf'
     api 'com.google.firebase:firebase-perf-ktx'
@@ -261,7 +254,7 @@ dependencies {
     api "io.realm:realm-annotations:${REALM_VERSION}"
     api "io.realm:realm-android-library:${REALM_VERSION}"
     api "io.realm:realm-android-kotlin-extensions:${REALM_VERSION}"
-    kapt "io.realm:realm-annotations-processor:${REALM_VERSION}"
+    ksp "io.realm:realm-annotations-processor:${REALM_VERSION}"
 
     //firebase database
     api 'com.google.firebase:firebase-database'
@@ -322,7 +315,7 @@ dependencies {
     api("com.squareup.moshi:moshi:1.9.2")
     api 'com.squareup.moshi:moshi-adapters:1.8.0'
     api("com.squareup.moshi:moshi-kotlin:1.8.0")
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
+    ksp("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
 
     //》》》》》》protobuf
     //api 'com.google.protobuf:protobuf-lite:3.0.1'
