--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,9 @@ android.debug.obsoleteApi=true
 android.injected.testOnly=false
 #firebasePerformanceInstrumentationEnabled=false
 # Work around https://issuetracker.google.com/149575364
-android.enableParallelJsonGen=true
+#android.enableParallelJsonGen=true
 # 4.0.0 canary 9 defaults to Prefab 1.0.0-alpha3, which is not the latest.
-android.prefabVersion=1.1.2
+#android.prefabVersion=2.0.0
 ########################################################
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
